# raylib-cpp-cmake-template

./: CMakeLists.txt  main.cpp
include/: axe-game-types.h  axe-game-utils.h  move-keys.h  player.h
source/: player.cpp
